--- a/index.html
+++ b/index.html
@@ -32,17 +32,32 @@
             <h2 class="text-3xl font-bold text-center">Mengapa Memilih Kami?</h2>
             <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold">Tantangan Pendidikan Karakter</h3>
-                    <p class="mt-2">Kami menyeimbangkan antara pendidikan akademik dan akhlakul karimah, memastikan anak Anda tumbuh dengan karakter yang kuat.</p>
+                    <h3 class="text-xl font-bold">Lingkungan Pembelajaran Yang Terfokus</h3>
+                    <p class="mt-2">Boarding School SMP Al-Bahjah An-Nahl Menawarkan lingkungan yang terstruktur dan terkontrol, yang dapat membantu santri lebih fokus pada akademik dan pengembangan karakter tanpa gangguan dari lingkungan luar.
+                    </p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold">Lingkungan Belajar yang Islami</h3>
-                    <p class="mt-2">Kami menyediakan lingkungan boarding school berbasis pondok pesantren yang kondusif untuk perkembangan putri Anda.</p>
+                    <h3 class="text-xl font-bold">Pembentukan Karakter Dan Disiplin</h3>
+                    <p class="mt-2">Boarding School SMP Al Bahjah An Nahl, Santri diajarkan disiplin yang tinggi serta nilai-nilai kehidupan yang penting, seperti tanggung jawab, mandiri, dan etika kerja. guna membantu dalam pembentukan karakter yang kuat.
+                    </p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold">Persiapan Masa Depan Global</h3>
-                    <p class="mt-2">Program bilingual dan entrepreneurship kami mempersiapkan putri Anda untuk menghadapi tantangan masa depan.</p>
+                    <h3 class="text-xl font-bold">Pengembangan Spiritual dan Agama</h3>
+                    <p class="mt-2">Di Boarding School SMP Al Bahjah An Nahl Santri tidak hanya fokus pada akademik tetapi juga pada pendidikan agama. Ini sangat penting untuk orang tua yang ingin anak-anak mereka tumbuh dengan pemahaman agama yang kuat dan aplikasi dalam kehidupan sehari-hari
+                    </p>
                 </div>
+                <div class="p-6 bg-white rounded-lg shadow-lg">
+                    <h3 class="text-xl font-bold">Akses Fasilitas Yang Cukup Baik</h3>
+                    <p class="mt-2">Boarding School SMP Al Bahjah An Nahl dilengkapi dengan fasilitas seperti laboratorium, perpustakaan, tempat ibadah, dan fasilitas olah raga yang mendukung.
+                    </p>
+                </div>
+
+                <div class="p-6 bg-white rounded-lg shadow-lg">
+                    <h3 class="text-xl font-bold">Pengembangan Kemandirian</h3>
+                    <p class="mt-2">Boarding School SMP Al Bahjah An Nahl dilengkapi dengan fasilitas seperti laboratorium, perpustakaan, tempat ibadah, dan fasilitas olah raga yang mendukung.
+                    </p>
+                </div>
+
             </div>
         </div>
     </section>
