--- a/index.html
+++ b/index.html
@@ -68,15 +68,36 @@
             <h2 class="text-3xl font-bold">Keunggulan</h2>
             <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6">
-                    <p>Kurikulum Nasional, Diniyah</p>
+                    <h3 class="text-xl font-bold">Kurikulum</h3>
+                    <p>Kurikulum meliputi nasional, diniyah, tahfidz dan Entrepreneurship</p>
                 </div>
                 <div class="p-6">
-                    <h3 class="text-xl font-bold">Pendidikan Berbasis Teknologi</h3>
-                    <p class="mt-2">Membangun karakter yang kuat dengan integrasi teknologi modern.</p>
+                    <h3 class="text-xl font-bold">Metode Pendidikan</h3>
+                    <p class="mt-2">Pendidikan berbasis akhlakul karimah & teknologi</p>
                 </div>
                 <div class="p-6">
                     <h3 class="text-xl font-bold">Program Bilingual</h3>
                     <p class="mt-2">Menguasai Bahasa Inggris dan Bahasa Arab untuk persiapan global.</p>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-bold">Extrakurikuler</h3>
+                    <p class="mt-2">Program Extrakurikuler Taekwondo (Kegiatan Olahraga), Panahan (Kegiatan Olahraga), Paduan Suara (Kegiatan Seni dan Budaya), Hadroh (Kegiatan Seni dan Budaya)</p>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-bold">Staff pengajar profesional</h3>
+                    <p class="mt-2">Staff pengajar SMP Albahjah An-Nahl adalah tenaga pendidik berpengalaman dan berdedikasi tinggi. Mereka mengutamakan pendekatan yang empatik dan inovatif dalam mengajar, menciptakan lingkungan belajar yang inspiratif, dan membimbing siswa menuju kesuksesan akademis serta pengembangan karakter yang kuat.</p>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-bold">Small Class di SMP Albahjah An-Nahl</h3>
+                    <p class="mt-2">Di SMP Albahjah An-Nahl, kami menerapkan sistem kelas kecil dengan 20-25 siswi per kelas. Pendekatan ini memungkinkan interaksi yang lebih intensif antara guru dan siswa, memastikan setiap siswi mendapatkan perhatian dan bimbingan yang optimal dalam proses belajar. Dengan ukuran kelas yang lebih kecil, kami dapat menciptakan lingkungan belajar yang lebih fokus dan kondusif untuk perkembangan akademis serta karakter siswi.</p>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-bold">Ruang Belajar Ber-AC di SMP Albahjah An-Nahl</h3>
+                    <p class="mt-2">SMP Albahjah An-Nahl menyediakan ruang belajar yang nyaman dan dilengkapi dengan pendingin udara (AC). Fasilitas ini memastikan suasana belajar yang sejuk dan kondusif, sehingga siswa dapat belajar dengan lebih fokus dan nyaman sepanjang hari.</p>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-bold">Boarding School Berbasis Pondok Pesantren di SMP Albahjah An-Nahl</h3>
+                    <p class="mt-2">SMP Albahjah An-Nahl menawarkan program Boarding School yang terintegrasi dengan nilai-nilai pondok pesantren. Siswa tinggal di asrama yang dikelola dengan disiplin tinggi, di mana mereka tidak hanya mendapatkan pendidikan akademis, tetapi juga pembinaan akhlak dan spiritualitas. Dengan pendekatan holistik, kami berkomitmen untuk membentuk generasi yang berilmu, berkarakter, dan beriman.</p>
                 </div>
             </div>
             <a href="#pendaftaran" class="mt-8 inline-block bg-green-900 text-white px-8 py-4 font-semibold rounded-full">Daftar Sekarang</a>
