--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                     <p class="mt-2">Staff pengajar SMP Albahjah An-Nahl adalah tenaga pendidik berpengalaman dan berdedikasi tinggi. Mereka mengutamakan pendekatan yang empatik dan inovatif dalam mengajar, menciptakan lingkungan belajar yang inspiratif, dan membimbing siswa menuju kesuksesan akademis serta pengembangan karakter yang kuat.</p>
                 </div>
                 <div class="p-6">
-                    <h3 class="text-xl font-bold">Small Class di SMP Albahjah An-Nahl</h3>
+                    <h3 class="text-xl font-bold">Small Class</h3>
                     <p class="mt-2">Di SMP Albahjah An-Nahl, kami menerapkan sistem kelas kecil dengan 20-25 siswi per kelas. Pendekatan ini memungkinkan interaksi yang lebih intensif antara guru dan siswa, memastikan setiap siswi mendapatkan perhatian dan bimbingan yang optimal dalam proses belajar. Dengan ukuran kelas yang lebih kecil, kami dapat menciptakan lingkungan belajar yang lebih fokus dan kondusif untuk perkembangan akademis serta karakter siswi.</p>
                 </div>
                 <div class="p-6">
-                    <h3 class="text-xl font-bold">Ruang Belajar Ber-AC di SMP Albahjah An-Nahl</h3>
+                    <h3 class="text-xl font-bold">Ruang Belajar Ber-AC </h3>
                     <p class="mt-2">SMP Albahjah An-Nahl menyediakan ruang belajar yang nyaman dan dilengkapi dengan pendingin udara (AC). Fasilitas ini memastikan suasana belajar yang sejuk dan kondusif, sehingga siswa dapat belajar dengan lebih fokus dan nyaman sepanjang hari.</p>
                 </div>
                 <div class="p-6">
-                    <h3 class="text-xl font-bold">Boarding School Berbasis Pondok Pesantren di SMP Albahjah An-Nahl</h3>
+                    <h3 class="text-xl font-bold">Boarding School Berbasis Pondok Pesantren </h3>
                     <p class="mt-2">SMP Albahjah An-Nahl menawarkan program Boarding School yang terintegrasi dengan nilai-nilai pondok pesantren. Siswa tinggal di asrama yang dikelola dengan disiplin tinggi, di mana mereka tidak hanya mendapatkan pendidikan akademis, tetapi juga pembinaan akhlak dan spiritualitas. Dengan pendekatan holistik, kami berkomitmen untuk membentuk generasi yang berilmu, berkarakter, dan beriman.</p>
                 </div>
             </div>
@@ -120,12 +120,24 @@
             <h2 class="text-3xl font-bold">Fasilitas Kami</h2>
             <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6">
-                    <h3 class="text-xl font-bold">Fasilitas Lengkap</h3>
-                    <p class="mt-2">Kamar tidur, kamar mandi, kelas ber-AC, ruang makan, dan lainnya.</p>
+                    <img src="path-to-your-image.jpg" alt="CLASSROOM TOILET" class="w-full h-auto mb-4">
+                    <h3 class="text-xl font-bold">CLASSROOM TOILET</h3>
+                    <p>Classroom toilet atau Toilet ruang kelas merupakan fasilitas vital yang berada di dekat ruang kelas. Toilet ini disediakan untuk dimanfaatkan para santri untuk membuang kotoran atau keperluan yang lainnya.</p>
+                </div>
+                <div class="p-6">
+                    <img src="path-to-your-image.jpg" alt="Ruang Belajar Ber-AC" class="w-full h-auto mb-4">
+                    <h3 class="text-xl font-bold">Ruang Belajar Ber-AC</h3>
+                    <p>Deskripsi tentang ruang belajar yang dilengkapi dengan AC.</p>
+                </div>
+                <div class="p-6">
+                    <img src="path-to-your-image.jpg" alt="Boarding School" class="w-full h-auto mb-4">
+                    <h3 class="text-xl font-bold">Boarding School</h3>
+                    <p>Deskripsi tentang boarding school berbasis pondok pesantren.</p>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- Proses Pendaftaran Section -->
     <section id="pendaftaran" class="py-20 bg-gray-200">
